fix para spacing

--- a/packages/web/src/styles/global.css
+++ b/packages/web/src/styles/global.css
@@ -39,8 +39,11 @@ h3,
 h4,
 h5,
 h6 {
-	/* margin-bottom: 1em; */
 	font-weight: 600;
+}
+
+p {
+	padding-bottom: 1em;
 }
 
 h1 {
